edit some colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#8F80B6</color>
     <color name="secondary1">#D2E27E</color>
-    <color name="secondary2">#BDE6F1</color>
+    <color name="secondary2">#D3EDF4</color>
 </resources>
