--- a/app/src/main/res/drawable/add_task_shape.xml
+++ b/app/src/main/res/drawable/add_task_shape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <corners android:radius="100dp"/>
-    <solid android:color="@color/secondary1"/>
+    <corners android:radius="60dp"/>
+    <stroke android:color="@color/secondary1" android:width="3dp"/>
 
 </shape>
