--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -8,7 +8,8 @@
         android:id="@+id/edit_text_title"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_margin="16dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="32dp"
         android:background="@drawable/add_task_shape"
         android:hint="@string/title"
         android:padding="16dp"
@@ -21,7 +22,8 @@
         android:id="@+id/spinner_category"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_margin="16dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="32dp"
         android:background="@drawable/add_task_shape"
         android:hint="@string/category"
         android:padding="16dp"
@@ -35,8 +37,8 @@
         android:layout_width="0dp"
         android:layout_height="150dp"
         android:layout_marginVertical="32dp"
-        android:layout_marginHorizontal="20dp"
-        android:background="@color/secondary1"
+        android:layout_marginHorizontal="24dp"
+        android:background="@drawable/add_task_shape"
         android:hint="@string/description"
         android:padding="16dp"
         android:textColor="@color/black"
@@ -48,7 +50,7 @@
         android:id="@+id/button_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@color/primary"
         android:text="@string/save"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +61,7 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
